--- a/frontend/src/components/SiteFooter.astro
+++ b/frontend/src/components/SiteFooter.astro
@@ -80,27 +80,32 @@
       <ul>
         <li>
           <a href='http://apostrophecms.com/?utm_source=demo' target='_blank'
-            >ApostropheCMS.com</a>
+            >ApostropheCMS.com</a
+          >
         </li>
         <li>
           <a
             href='https://docs.apostrophecms.org/?utm_source=demo'
-            target='_blank'>ApostropheCMS Docs</a>
+            target='_blank'>ApostropheCMS Docs</a
+          >
         </li>
         <li>
           <a
             href='https://docs.apostrophecms.org/guide/development-setup.html?utm_source=demo'
-            target='_blank'>Getting Started</a>
+            target='_blank'>Getting Started</a
+          >
         </li>
         <li>
           <a
             href='https://apostrophecms.com/assembly?utm_source=demo'
-            target='_blank'>ApostropheCMS Multisite</a>
+            target='_blank'>ApostropheCMS Multisite</a
+          >
         </li>
         <li>
           <a
             href='https://meetings.hubspot.com/tom-boutell/demo-meeting?utm_source=demo'
-            target='_blank'>Book a Call</a>
+            target='_blank'>Book a Call</a
+          >
         </li>
       </ul>
     </div>
@@ -110,27 +115,32 @@
         <li>
           <a
             href='https://apostrophecms.com/extensions?license=pro&utm_source=demo'
-            target='_blank'>Pro Feature</a>
+            target='_blank'>Pro Feature</a
+          >
         </li>
         <li>
           <a
             href='https://apostrophecms.com/hosting?utm_source=demo'
-            target='_blank'>Hosting</a>
+            target='_blank'>Hosting</a
+          >
         </li>
         <li>
           <a
             href='https://apostrophecms.com/blog?category=product-updates&utm_source=demo'
-            target='_blank'>Changelog</a>
+            target='_blank'>Changelog</a
+          >
         </li>
         <li>
           <a
             href='https://apostrophecms.com/accessibility?utm_source=demo'
-            target='_blank'>Accessibility</a>
+            target='_blank'>Accessibility</a
+          >
         </li>
         <li>
           <a
             href='https://apostrophecms.com/security?utm_source=demo'
-            target='_blank'>Security</a>
+            target='_blank'>Security</a
+          >
         </li>
       </ul>
     </div>
@@ -139,23 +149,27 @@
       <ul>
         <li>
           <a href='https://bsky.app/profile/apostrophecms.com' target='_blank'
-            >Bluesky</a>
+            >Bluesky</a
+          >
         </li>
         <li>
           <a href='https://x.com/apostrophecms' target='_blank'>X / Twitter</a>
         </li>
         <li>
           <a href='https://discord.com/invite/HwntQpADJr' target='_blank'
-            >Join the Discord</a>
+            >Join the Discord</a
+          >
         </li>
         <li>
           <a href='https://youtube.com/c/apostrophecms' target='_blank'
-            >YouTube</a>
+            >YouTube</a
+          >
         </li>
         <li>
           <a
             href='https://www.linkedin.com/company/apostrophecms/'
-            target='_blank'>LinkedIn</a>
+            target='_blank'>LinkedIn</a
+          >
         </li>
       </ul>
     </div>
@@ -237,6 +251,7 @@
   }
 
   function initThemeToggle() {
+    console.log('initialized');
     const toggle = document.querySelector('[data-mode-switch] input');
     if (!toggle) return;
 
@@ -269,8 +284,10 @@
   }
 
   // Handle edit mode transitions
-  if (window.apos) {
-    window.apos.bus.on('context-editing', initThemeToggle);
-    window.apos.bus.on('context-previewing', initThemeToggle);
-  }
+  setTimeout(() => {
+    if (window.apos) {
+      window.apos.bus.$on('refreshed', initThemeToggle);
+      window.apos.bus.$on('modal-resolved', initThemeToggle);
+    }
+  }, 300);
 </script>
