Fix image widget

--- a/frontend/src/widgets/ImageWidget.astro
+++ b/frontend/src/widgets/ImageWidget.astro
@@ -1,36 +1,68 @@
 ---
-import { getImageSrcset, getImageSizes } from '@apostrophecms/apostrophe-astro/lib/util';
-const { widget, options = {} } = Astro.props;
+import {
+  getAttachmentUrl,
+  getAttachmentSrcset,
+  getFocalPoint,
+  getWidth,
+  getHeight,
+} from "@apostrophecms/apostrophe-astro/lib/attachment.js";
+import { slugify } from "@apostrophecms/apostrophe-astro/lib/util.js";
+import placeholderImg from "../../public/images/image-widget-placeholder.jpg";
+import Figure from "../components/Figure.astro";
 
-const className = options.className || widget.className || 'image-widget';
-const size = options.size || widget.size || 'full';
-const loadingType = options.loadingType || widget.loadingType || 'lazy';
+const { widget = {}, options = {} } = Astro.props;
+
+const className = options.className || widget.className || 'img-widget';
 const dimensionAttrs = options.dimensionAttrs ?? widget.dimensionAttrs ?? true;
 
-const attachment = widget.image?.attachment;
-if (!attachment) {
-  return;
+const placeholder = widget?.aposPlaceholder;
+const imageObj = widget?._image?.[0];
+
+const src = placeholder ? placeholderImg.src : getAttachmentUrl(imageObj);
+
+const srcset = placeholder ? "" : getAttachmentSrcset(imageObj);
+const objectPosition = placeholder ? "center center" : getFocalPoint(imageObj);
+// Only add width/height if they exist to prevent layout shift
+const width = dimensionAttrs && imageObj ? getWidth(imageObj) : undefined;
+const height = dimensionAttrs && imageObj ? getHeight(imageObj) : undefined;
+const aspectRatio = width && height ? `${width}/${height}` : undefined;
+
+let link = {
+  url: widget.linkHref,
+  title: widget.linkHrefTitle || widget.caption,
+  target: widget.linkTarget,
+  rel: null,
+};
+const image = {
+  src,
+  alt: imageObj?.alt || imageObj?.attachment?._alt || "",
+  style: className,
+  srcset,
+  objectPosition,
+  width,
+  height,
+  aspectRatio
+};
+let style = `${className}__wrapper`;
+
+switch (widget.linkTo) {
+  case "none": {
+    link = null;
+    break;
+  }
+  case "_url": {
+    link.rel = widget.target === "_blank" ? "noopener noreferrer" : null;
+    break;
+  }
+  default: {
+    // slugify the linkTo value to reference the widget field.
+    const name = "_" + slugify(widget.linkTo);
+    const item = widget[name]?.[0];
+    link.url = item?._url;
+    link.title = widget.linkTitle || item?.title;
+    break;
+  }
 }
-
-const srcset = getImageSrcset(attachment._urls);
-const sizes = getImageSizes(widget.image._crop);
-const alt = widget.altText || attachment.alt || attachment.title || '';
-
-// Build dimension attributes if enabled
-const dimensions = dimensionAttrs ? {
-  width: attachment.width,
-  height: attachment.height
-} : {};
 ---
 
-<div class={`${className}__wrapper`}>
-  <img 
-    class={className}
-    src={attachment._urls[size]}
-    srcset={srcset}
-    sizes={sizes}
-    alt={alt}
-    loading={loadingType}
-    {...dimensions}
-  />
-</div>
+<Figure {image} {link} caption={widget.caption} {style} baseClassName={className} />
